[package]
name = "pro_logue"
version = "0.1.0"
edition = "2024"
authors =["Chase Núñez chasenunez@gmail.com"]
description = "TUI logue with version control, search, and catalogue browsing"

[dependencies]
crossterm = "0.26"
ratatui = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.17"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

